<resources>
    <string name="app_name">Java_DataBase_Advance</string>
    <string name="select">Select</string>
    <string name="hint_date">DD-MM-YYYY</string>
    <string name="hint_answer">Give Answer</string>
    <string name="no_data_message">No Data</string>
    <string name="not_found">Not found</string>
    <string name="formation_date">Date : </string>
    <string name="member_count">Member Count</string>
    <string name="total">Total</string>
    <string name="total_left">Total : </string>
    <string name="Cost">Cost</string>
    <string name="total_cost">Cost : </string>
    <string name="balance">Balance</string>
    <string name="clear">Remove all</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_applicable">Not Applicable</string>
    <string name="common_warning_title">Attention!</string>
    <string name="update_total">Want to update total amount ?</string>
    <string name="loading">Loading …</string>
    <string name="money_sign"> /-</string>
    <string name="available"> Available</string>
    <string name="zero"> 00</string>

</resources>