<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/ResultShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="6dp"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="4dp"
                android:background="@color/teal_200"
                android:elevation="5dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:translationZ="4dp"
                app:cardCornerRadius="8dp"
                app:cardUseCompatPadding="true">

                <!--   Recycler View Item Row   -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@color/md_blue_300"
                        android:orientation="horizontal"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:weightSum="8"
                        android:id="@+id/total_dashBoard"
                        android:baselineAligned="false">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="8"
                            android:gravity="center_vertical"
                            android:orientation="vertical"
                            android:paddingTop="4dp"
                            android:paddingBottom="4dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/total_id"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:ellipsize="end"
                                    android:text="@string/total"
                                    android:textAlignment="center"
                                    android:textColor="@color/white"
                                    android:textSize="28sp"
                                    android:textStyle="bold" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:gravity="center"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/balance"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:ellipsize="end"
                                    android:text="@string/loading"
                                    android:textColor="@color/md_white_1000"
                                    android:textSize="20sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:gravity="center"
                                    android:text="@string/money_sign"
                                    android:textColor="@color/md_white_1000"
                                    android:textSize="20sp" />

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>


                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <!-- Password Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="11"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/totalBalanceUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="11"
                    android:imeOptions="actionDone"
                    android:scrollHorizontally="true"
                    android:maxLines="1"
                    android:drawableStart="@drawable/ic_action_add"
                    android:hint="@string/update_total"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Login Button -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/mLoginBtn"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:textColor="@color/md_white_1000"
                android:text="Update"/>

        </LinearLayout>

    </LinearLayout>

    <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="addNewRecord"
        android:src="@drawable/ic_baseline_check_24"
        app:backgroundTint="@color/colorAccent"
        app:fabSize="normal" />-->


</RelativeLayout>