<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:app="http://schemas.android.com/tools"
        android:id="@+id/item_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_white_1000"
        android:elevation="5dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        card_view:cardCornerRadius="8dp"
        android:translationZ="4dp"
        android:layout_margin="4dp"
        card_view:cardUseCompatPadding="true"
        app:ignore="NamespaceTypo">

        <!--   Recycler View Item Row   -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:weightSum="8">


                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1.4"
                    android:padding="4dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/FirstLetterOfName"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="A"
                        android:textColor="@color/colorPrimary"
                        android:textSize="24sp" />



                </RelativeLayout>



                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="5.4"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginLeft="8dp"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp"
                    android:gravity="center_vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/GroupName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/not_found"
                            android:inputType="text"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@color/md_blue_700"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/formation_date"
                            android:textSize="14sp"
                            android:textColor="@color/md_grey_800"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" :"
                            android:textColor="@color/md_grey_800"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/GroupFormationDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/not_found"
                            android:ellipsize="end"
                            android:layout_marginLeft="4dp"
                            android:maxLines="1"
                            android:tag="Date"
                            android:textSize="14sp"
                            android:textColor="@color/md_black_1000"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="2dp"
                        android:weightSum="2">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/member_count"
                                android:textColor="@color/md_grey_800"
                                android:textSize="14sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=" :"
                                android:textColor="@color/md_grey_800"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/MemberCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0000"
                                android:layout_marginLeft="4dp"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:textColor="@color/md_blue_800"
                                android:textSize="16sp"
                                android:textStyle="bold"/>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1.2"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="4dp"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="4dp"
                        android:src="@drawable/delete" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Delete"
                        android:textColor="@color/md_red_700" />


                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>